 modifications, as long as this notice is preserved.

 This program is distributed in the hope that it will be useful, but
 WITHOUT ANY WARRANTY, to the extent permitted by law; without even the
 implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

		----------------------------------

ChangeLog about GNU GLOBAL

March 9 2016, Shigio YAMAGUCHI

	Now, the following files in datadir are static.
	- completion.cgi
	- global.cgi
	- jscode_suggest
	- jscode_treeview
	- style.css

February 3 2016, Shigio YAMAGUCHI

	[Plug-in parser]
	Added new plug-in parser 'universal-ctags.la'.
	It is made using exuberant-ctags.c and -DUSE_EXTRA_FIELDS compile option.

	[gtags.conf]
	Added new entry 'universal-ctags'.
	Added new variables 'ctagscom'.

	[Plug-in interface]
	Added new plug-in interface function getconf().
	You can access config variables of gtags(1) from plug-in parsers.

Nov 30 2015, Shigio YAMAGUCHI

	Replaced @libdir_QUOTED@ with configuration variable in gtags.conf.in.

Nov 21 2015, Shigio YAMAGUCHI

	Removed ctags-5.8.patch, because Universal Ctags supports reference tags
	by itself now.
	Added new test for Universal Ctags.

Oct 14 2015, Shigio YAMAGUCHI

	[configure.ac]
	Replaced @prefix_QUOTED@ with @libdir_QUOTED@ in gtags.conf.in.
	From now on, you can use the --prefix, --exec-prefix and --libdir
	options to set a value of @libdir_QUOTED@. This was done by Kevin Farshaw.

	[libparser/parser.c]
	Changed dynamic loading code using ld_dlopenext().
	(Fedora packaging guidelines prohibit .la files)

	if (ld_dlopen('foo.la') == FAILED)
		error_and_exit();
	|
	v
	if (ld_dlopen('foo.la') == FAILED)
		if (ld_dlopenext('foo') == FAILED)
			error_and_exit();

	From now on, extension of DDL is needless.

June 22 2015, Shigio YAMAGUCHI

	To recover easiness of reading source code, removed Doxygen tags
	in the source code except for the followings:
	('description' should be plain text)

	/**< description */

	/**
	 *	description